[package]
name = "verfploeter"
version = "0.1.19"
authors = ["Wouter de Vries <wouter@wouter-web.nl>"]
edition = "2018"

[dependencies]
grpcio = "0.4"
futures = "0.1"
protobuf = { version = "~2.0" }
env_logger = "0.5.13"
log = "0.4.6"
clap = "2.32.0"
socket2 = "0.3.8"
byteorder = "1"
ratelimit_meter = "4.0.1"
tokio = "0.1.11"
prettytable-rs = "0.8.0"
sha2 = "0.8.0"
hmac = "0.7.0"
maxminddb = "0.11.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.crypto-mac]
version = "0.7"
features = ["std"]
