[package]
name = "verfploeter"
version = "0.1.41"
authors = ["Wouter de Vries <wouter@wouter-web.nl>"]
edition = "2018"

[dependencies]
grpcio = "~0.4"
futures = "~0.1"
protobuf = { version = "~2.0" }
env_logger = "~0.6"
log = "~0.4"
clap = "~2"
socket2 = "~0.3"
byteorder = "~1"
ratelimit_meter = "~4"
tokio = "~0.1"
prettytable-rs = "~0.8"
sha2 = "~0.8"
hmac = "~0.7"
maxminddb = "~0.13"
serde_json = "~1.0"
serde = "~1.0"
serde_derive = "~1.0"
prometheus = "0.5.0"
hyper = "~0.12"
lazy_static = "~1.1"

[dependencies.crypto-mac]
version = "0.7"
features = ["std"]
